--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,21 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  db:
+  mysql:
     image: mysql:8.0
-    container_name: mysql_db
-    restart: always
+    container_name: mysql-db
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: addressbook
+      MYSQL_DATABASE: appdb
       MYSQL_USER: appuser
       MYSQL_PASSWORD: apppass
     ports:
       - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
 
   app:
     image: addressimage:v1
-    container_name: addressbook_app
+    container_name: c01
     ports:
       - "1234:8080"
     depends_on:
-      - db
-    restart: always
-
-volumes:
-  mysql_data:
+      - mysql
